Updated capacitor and capacitor config, fixed topbar dark mode logo

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -112,8 +112,19 @@ $theme: mat-light-theme($primary, $accent, $warn);
   --ion-color-light-tint: #f5f6f9;
 }
 
+/* Toolbar Branding */
+ion-toolbar {
+  image-rendering: optimizeQuality;
+  image-rendering: -moz-crisp-edges; /* Firefox */
+  image-rendering: -o-crisp-edges; /* Opera */
+  image-rendering: -webkit-optimize-contrast; /* Webkit (non-standard naming) */
+  image-rendering: crisp-edges;
+  --background: var(--ion-color-light) url('../assets/images/logo-marker.png') no-repeat center/50px;
+}
+
 // @media (prefers-color-scheme: dark) {
 body.dark-theme {
+
   /**
     * General Branding
     * -------------------------------------------
@@ -279,5 +290,10 @@ body.dark-theme {
 
   ion-title.title-large {
     --color: white;
+  }
+
+  /* Toolbar Branding */
+  ion-toolbar {
+    --background: var(--ion-color-light) url('../assets/images/logo-white.png') no-repeat center/40px;
   }
 }
